--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,10 +16,10 @@ steps:
     packageType: sdk
     version: 3.1.300
 
-- task: Npm@1
-  displayName: 'Run npm install'
-  inputs:
-    verbose: false
+#- task: Npm@1
+#  displayName: 'Run npm install'
+#  inputs:
+#    verbose: false
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
