--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ stages:
       condition: succeeded()
 
 - stage: Deploy
-  displayName: deploy to IIS
+  displayName: Deploy to IIS
   dependsOn: Build
   jobs:
   - deployment: DeployToIIS
@@ -74,6 +74,11 @@ stages:
               WebsitePhysicalPath: '%SystemDrive%\inetpub\wwwroot\$(websiteName)'
               CreateOrUpdateAppPoolForWebsite: true
               AppPoolNameForWebsite: '$(websiteName)'
+          - task: Powershell@2
+            inputs:
+              targetType: 'inline'
+              script: |
+                New-WebBinding -Name "$(websiteName)" -Port 80 -IP *
           - task: IISWebAppDeploymentOnMachineGroup@0
             displayName: 'Deploy IIS Website'
             inputs:
