--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,3 +78,4 @@ stages:
             inputs:
               WebSiteName: '$(websiteName)'
               Package: '$(System.ArtifactsDirectory)\**\*.zip'
+              AdditionalArguments: '-dest:path="C:\inetpub\wwwroot\"$(websiteName)"'
