Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,5 +77,4 @@ stages:
             displayName: 'Deploy IIS Website'
             inputs:
               WebSiteName: '$(websiteName)'
-              Package: '$(System.ArtifactsDirectory)\**\*.zip'
-              AdditionalArguments: '-dest:path="C:\inetpub\wwwroot\"$(websiteName)"'
+              Package: '$(System.ArtifactsDirectory)\**\*.zip'AdditionalArguments: '-dest:path="C:\inetpub\wwwroot\"$(websiteName)"'
